src/app/components/cards-container/cards-container.module.css
.cards{
  display: flex;
  gap: 20px;
  flex-direction: row;
  width: 90%;
  margin: auto;
}

.started{
  display: flex;
  justify-content: center;
  text-align: center;
  margin-bottom: 40px;
  margin-top: 40px;
  gap: 10px;
  color: #00DB63;
}

.get{
  color: white;
}

